--- a/home/index.html
+++ b/home/index.html
@@ -15,23 +15,25 @@
                 <li><a>header link three</a></li>
             </ul>
         </div>
+        <div class="header-info">
+            <div class="website-info">
+                <h1>
+                    This website is awesome
+                </h1>
+                <p>
+                    This website has some subtext that goes here under the main title. It's a smaller
+                    font and the color is lower contrast
+                </p>
+                <button>
+                    Sign up
+                </button>
+            </div>
+            <div class="image-placeholder">
+                this is a placeholder for an image
+            </div>
+        </div>
     </div>
     <div class="info-container">
-        <div class="website-info">
-            <h1>
-                This website is awesome
-            </h1>
-            <p>
-                This website has some subtext that goes here under the main title. It's a smaller
-                font and the color is lower contrast
-            </p>
-            <button>
-                Sign up
-            </button>
-        </div>
-        <div class="image-placeholder">
-            this is a placeholder for an image
-        </div>
     </div>
     <div class="quote-container">
 
