--- a/home/index.html
+++ b/home/index.html
@@ -34,6 +34,25 @@
         </div>
     </div>
     <div class="info-container">
+        <h1>Some random information.</h1>
+        <ul class="info-list">
+            <li class="info-item">
+                <div class="round-square"></div>
+                <p class="info-text">this is some subtext under an illustration or image</p>
+            </li>
+            <li class="info-item">
+                <div class="round-square"></div>
+                <p class="info-text">this is some subtext under an illustration or image</p>
+            </li>
+            <li class="info-item">
+                <div class="round-square"></div>
+                <p class="info-text">this is some subtext under an illustration or image</p>
+            </li>
+            <li class="info-item">
+                <div class="round-square"></div>
+                <p class="info-text">this is some subtext under an illustration or image</p>
+            </li>
+        </ul>
     </div>
     <div class="quote-container">
 
