--- a/home/index.html
+++ b/home/index.html
@@ -55,7 +55,12 @@
         </ul>
     </div>
     <div class="quote-container">
-
+        <p class="quote-text">
+            This is an inspiring quote, or a testimonial from a customer.
+            Maybe it's just filling up space, or maybe people will actually
+            read it. Who knows? All I know is that it looks nice.
+        </p>
+        <p class="quote-footer"p>-Thor, God of Thunder</p>
     </div>
     <div class="call-to-action">
 
