Call to action and footer

--- a/home/index.html
+++ b/home/index.html
@@ -63,10 +63,13 @@
         <p class="quote-footer"p>-Thor, God of Thunder</p>
     </div>
     <div class="call-to-action">
-
+        <div class="call-to-action-box">
+            <div class="call-to-action-text"></div>
+            <button class="signup action">Sign up</button>
+        </div>
     </div>
     <div class="footer">
-
+        Copyright © The Odin Project 2021
     </div>
 </body>
 </html>
