Coloring sections of website

--- a/home/index.html
+++ b/home/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"/>
     <title>My Landing Page</title>
 </head>
 <body>
-    <div class="header-container">
-        <div class="header-navigation">
-            <h1>Header Logo</h1>
+    <div class="hero-container">
+        <div class="header">
+            <div>Header Logo</div>
             <ul>
                 <li><a>header link one</a></li>
                 <li><a>header link two</a></li>
                 <li><a>header link three</a></li>
             </ul>
         </div>
-        <div class="header-info">
+        <div class="hero-info">
             <div class="website-info">
                 <h1>
                     This website is awesome
