--- a/home/index.html
+++ b/home/index.html
@@ -25,7 +25,7 @@
                     This website has some subtext that goes here under the main title. It's a smaller
                     font and the color is lower contrast
                 </p>
-                <button>
+                <button class="signup">
                     Sign up
                 </button>
             </div>
