--- a/home/index.html
+++ b/home/index.html
@@ -16,7 +16,7 @@
                 <li class="header-link-container"><a class="header-link">header link three</a></li>
             </ul>
         </div>
-        <div class="hero-info padded">
+        <div class="hero-info">
             <div class="website-info">
                 <div class="hero-main-text">
                     This website is awesome
@@ -56,23 +56,23 @@
         </ul>
     </div>
     <div class="quote-container padded">
-        <p class="quote-text">
+        <span class="quote-text">
             This is an inspiring quote, or a testimonial from a customer.
             Maybe it's just filling up space, or maybe people will actually
             read it. Who knows? All I know is that it looks nice.
-        </p>
-        <p class="quote-footer"p>-Thor, God of Thunder</p>
+        </span>
+        <span class="quote-footer"p>-Thor, God of Thunder</span>
     </div>
     <div class="call-to-action padded">
         <div class="call-to-action-box">
-            <div class="call-to-action-text">
-                <p>Call to action! It's time!</p>
-                <p>Sign up for our product by clicking that button right over there!</p>
+            <div class="call-to-action-textbox">
+                <span class="call-to-action-text">Call to action! It's time!</span>
+                <span class="sign-up-text">Sign up for our product by clicking that button right over there!</span>
             </div>
             <button class="signup action">Sign up</button>
         </div>
     </div>
-    <div class="footer">
+    <div class="footer padded">
         Copyright © The Odin Project 2021
     </div>
 </body>
